JEDIT 2.5 VERSION HISTORY

* Version 2.5final

+ New Features

- SHTML mode (Mike Dillon)

+ Bug Fixes

- Adding buttons with icons loaded from external files didn't work on non-Unix
  systems
- Fixed bug with highlighting SPAN statements with the EXCLUDE_MATCH flag set
  (Mike Dillon)

* Version 2.5pre8

+ New Features

- VHDL edit mode (Dante Fabrizio)
- View.setInputHandler() method added, for plugins that want to do non-trivial
  input handling (eg, CodeAid)

+ Enhancements

- jEdit plugin central will be moved to SourceForge soon. To make the
  transition easier, the plugin manager has been updated to use the
  SourceForge URL to receive plugin info

+ Bug Fixes

- Another attempt to fix the 'async requests executed twice' bug (since 2.5pre6)
- The help viewer would not work properly after being closed and reopened
  (since 2.5pre7)
- Fixed possible divide by zero in JEditTextArea.offsetToX()

* Version 2.5pre7

+ Bug Fixes

- WorkThread class no longer prints debugging messages as errors
  (since 2.5pre6)
- Delete line didn't work properly if the buffer only had two lines, both
  empty
- Fixed possible ArrayIndexOutOfBounds in select-paragraph command
- Fixed minor problem with join-lines action
- 'Select Line Range' would print an exception if invalid line numbers were
  entered
- Geometry of search & replace dialog box was only saved if the user
  clicked the 'cancel' button
- Asynchronous work requests could be executed twice (since 2.5pre6)
- Fixed incorrect behaviour of home/end keys on lines which only
  contained whitespace (since 2.5pre5)

* Version 2.5pre6

+ Enhancements

- Caret register code is now more efficent

+ Bug Fixes

- Initial size of plugin download progress dialog box was wrong
- 'Replace All' with the directory file set didn't work
- By not specifying a 'To:' field, the 'Send' command could trigger anti-spam
  filters
- 'Latest Version' plugin could throw a NoSuchMethodError