@@ -55,6 +55,12 @@ archives, visit <http://www.sourceforge.net/mail/?group_id=588>.
 
 The preferred way to report bugs and to suggest features is to use
 jEdit's bug tracker; <http://www.sourceforge.net/bugs/?group_id=588>.
+When writing a bug report, please try to be as specific as possible.
+You should specify your jEdit version, Java version, operating system,
+any relevant output from the activity log, and an e-mail address, in
+case we need further information to fix the bug. If you want to
+suggest a feature, it might be a good idea to post to one of the
+mailing lists first.
 
 Finally, you may contact me directly by e-mailing <sp@gjt.org>.
 
