@@ -12,6 +12,11 @@ JEDIT 2.5 VERSION HISTORY
   systems
 - Fixed bug with highlighting SPAN statements with the EXCLUDE_MATCH flag set
   (Mike Dillon)
+- Fixed possible NullPointerException in help viewer, probably caused by
+  Java bug (since 2.5pre7) 
+- jEdit would erronously write an autosaved buffer back to disk after it had
+  been recovered
+- 'Stop' button in installer didn't work (since 2.5pre2)
 
 * Version 2.5pre8
 
